<resources>
    <string name="app_name">ClearSky</string>

    <!-- strings settings layout -->
    <string name="hint_city_selection">Type city</string>
    <string name="hint_country_selection">Type country</string>
    <string name="label_city_selection">Select city</string>
    <string name="label_country_selection">Select country</string>
    <string name="get_location">Get location</string>

    <!-- menu items -->
    <string name="settings_title">Settings</string>

    <!-- permission strings -->
    <string name="permission_location_info">Allow to get estimated location.</string>
    <string name="got_it">Got it</string>
    <string name="unable_to_get_location">Unable to get location.</string>
    <string name="positivie_yes">Yes</string>
    <string name="negative_no">No</string>
    <string name="gps_disabled_switch_on">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="wireless_disabled_switch_on">Your wireless location settings are off, do you want to enable it?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
