<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <android.support.v7.widget.CardView
            android:id="@+id/place_pick_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/country_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_country_selection"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/label_country_selection"/>

                <AutoCompleteTextView
                    android:id="@+id/country_selection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:completionHint="@string/hint_country_selection"
                    android:completionThreshold="2"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/country_label"
                    app:layout_constraintTop_toBottomOf="@+id/country_label"
                    tools:text="Type your country"/>

                <TextView
                    android:id="@+id/city_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_city_selection"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_selection"
                    tools:text="@string/label_city_selection"/>

                <AutoCompleteTextView
                    android:id="@+id/city_selection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:completionHint="@string/hint_city_selection"
                    android:completionThreshold="2"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/city_label"
                    app:layout_constraintTop_toBottomOf="@+id/city_label"
                    tools:text="@string/hint_city_selection"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_selection"
            app:layout_constraintVertical_bias="0.247">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_scope"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_button"
                    app:layout_constraintVertical_bias="0.5"/>

                <Button
                    android:id="@+id/location_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/get_location"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/location_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/location_button"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="TextView"/>
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/switch_location_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:layout_anchor="@id/place_pick_card"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:srcCompat="@mipmap/ic_swap_vert_white_36dp"/>
</android.support.design.widget.CoordinatorLayout>
